# self-evolving-software

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  appspec.yml  contracts.example.yaml  core_api_contracts.yaml  docker-compose.prod.yml  docker-compose.yml  framework_invariants.yaml  genesis.yaml  protected_framework_files.txt  purpose.yaml
evolving_engine/: Dockerfile  pyproject.toml
evolving_engine/engine/: __init__.py  __main__.py  config.py  context.py  event_reporter.py  orchestrator.py  runtime_contracts.py  usage_tracker.py
evolving_engine/engine/agents/: __init__.py  base.py  data_manager.py  generator.py  leader.py  purpose_evolver.py  validator.py
evolving_engine/engine/deployer/: __init__.py  git_ops.py  pipeline.py
evolving_engine/engine/models/: __init__.py  backlog.py  evolution.py  framework_invariants.py  genesis.py  inception.py  memory.py  purpose.py  repo_map.py  skills.py
evolving_engine/engine/monitor/: __init__.py  models.py  observer.py
evolving_engine/engine/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  openai_provider.py  resilient_provider.py
evolving_engine/engine/repo/: __init__.py  repo_map.py  scanner.py
evolving_engine/engine/sandbox/: __init__.py  base.py  codebuild_sandbox.py  docker_sandbox.py
evolving_engine/engine/skills/: __init__.py  runtime.py
evolving_engine/tests/: test_config.py  test_context.py  test_deploy_version.py  test_deployer.py  test_event_reporter.py  test_framework_invariants.py  test_monitor_observer.py  test_orchestrator.py  test_purpose.py  test_repo_scanner.py  test_resilient_provider.py  test_runtime_contracts.py  test_sandbox_contract.py  test_skills_runtime.py  test_usage_tracker.py
evolving_engine/tests/test_agents/: test_leader.py
managed_app/backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
managed_app/backend/alembic/: env.py
managed_app/backend/alembic/versions/: 001_add_evolution_tables.py  002_add_admin_users.py  004_add_system_settings.py  (+7 more)
managed_app/backend/app/: __init__.py  _deploy_version.py  auth.py  config.py  database.py  main.py  system_settings.py
managed_app/backend/tests/: test_api_router_autoload.py  test_apps_api.py  test_chat.py  test_competitive_intelligence.py  test_core_api_contract.py  test_database_api.py  test_evolution_notifications.py  test_health.py  test_metrics.py  test_metrics_middleware.py  test_purpose_input.py  test_settings_api.py  test_skills_api.py  test_skills_runtime.py  test_system_info.py  test_system_settings.py
(+105 files in other folders)
