[project]
name = "evolving-engine"
version = "0.1.0"
description = "AI-powered self-evolving engine — multi-agent system for autonomous code generation and deployment"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "boto3>=1.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "docker>=7.0.0",
    "gitpython>=3.1.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
